# hevolisa

./: ColorMatrix.hs  DnaBrush.hs  DnaDrawing.hs  DnaPoint.hs  DnaPolygon.hs  Evolution.hs  FitnessCalculator.hs  Hevolisa.hs  Main.hs  Makefile  README  Renderer.hs  Settings.hs  Setup.hs  Shapes.hs  Tools.hs  hevolisa.cabal  test.hs
Hevolisa/: Evolution.hs  Renderer.hs  Settings.hs  Tools.hs  Vector.hs
Hevolisa/Shapes/: DnaBrush.hs  DnaDrawing.hs  DnaPoint.hs  DnaPolygon.hs
