Name:		hevolisa
Version:	0.0
Description:	Haskell port of the glorious EvoLisa polygon image approximator
License:	BSD3
License-file:	LICENSE
Author:		Daniel Neun
Maintainer:	daniel.neun@gmx.de
Build-Depends:	base, haskell98, cairo, gtk, array
Build-Type:	Simple

Executable:	Main
Main-is:	Main.hs
ghc-options:	-O0