Name:		hevolisa-dph
Version:	0.0
Description:	Haskell port of the glorious EvoLisa polygon image approximator
License:	BSD3
License-file:	LICENSE
Author:		Daniel Neun
Maintainer:	daniel.neun@gmx.de
Build-Depends:	base >= 3.0.3.0, haskell98 >= 1.0.1.0, cairo >= 0.9.13, gtk >= 0.9.13, bytestring >= 0.9.1.4, dph-seq >= 0.3
Build-Type:	Simple

Executable:	Main
Main-is:	Main.hs
ghc-options: