Name:		hevolisa-dph
Version:	0.0
Description:	Genetic Mona Lisa problem in Haskell - using Data Parallel Haskell
License:	BSD3
License-file:	LICENSE
Author:		Daniel Neun
Maintainer:	daniel.neun@gmx.de
Category:	Graphics
Build-Depends:	base >= 3.0.3.0, haskell98 >= 1.0.1.0, cairo >= 0.9.13, gtk >= 0.9.13, bytestring >= 0.9.1.4, dph-seq >= 0.3, filepath >= 1.1.0.1
Build-Type:	Simple
Extra-Source-Files:
	Hevolisa/Shapes/DnaBrush.hs
	Hevolisa/Shapes/DnaDrawing.hs
	Hevolisa/Shapes/DnaPoint.hs
	Hevolisa/Shapes/DnaPolygon.hs
	Hevolisa/Evolution.hs
	Hevolisa/Renderer.hs
	Hevolisa/Settings.hs
	Hevolisa/Tools.hs
	Hevolisa/Vector.hs
Data-Files:
	mona_lisa_crop.png

Executable:	Main
Main-is:	Main.hs
ghc-options: